<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/base_de_datos_ndicos"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"/>

    <Button
        android:id="@+id/lista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="30dp"
        android:layout_weight="1"
        android:text="@string/ver_lista"
        android:textSize="20sp" />
    <Button
        android:id="@+id/borrar"
        android:text="@string/borrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="30dp"
        android:textSize="20sp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/annadir"
        android:text="@string/annadir"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="30dp"
        android:layout_weight="1"/>
</LinearLayout>