<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:stretchColumns="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center">
        <TextView
            android:layout_marginHorizontal="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/groupTitle"/>
        <EditText
            android:id="@+id/ETGroup"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:inputType="text"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginHorizontal="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/diskTitle" />
        <EditText
            android:id="@+id/ETDiscos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:inputType="text"
            android:textAlignment="center"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/delete" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/exit" />
    </TableRow>
</TableLayout>